# ai-spend-tracker

./: .gitignore  AGENTS.md  Install.command  README.md  config.example.json  config.py  errors.py  menu_bar.py  pyproject.toml  requirements.txt  run_tracker.command  spend.py
tests/: test_config.py  test_spend.py
