[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-spend-tracker"
version = "1.0.0"
description = "Track AI API spending across OpenAI, Anthropic, OpenRouter, and Cursor from your macOS menu bar"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "openai", "anthropic", "spend", "tracker", "menu-bar", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ai-spend-tracker = "menu_bar:main"
ai-spend-tracker-cli = "spend:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-spend-tracker"
Repository = "https://github.com/yourusername/ai-spend-tracker"
Issues = "https://github.com/yourusername/ai-spend-tracker/issues"

[tool.setuptools]
packages = ["spend", "config", "errors"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]